brain/sources/prod-metadata/objects/Interview_Incentive_Configuration__mdt/Interview_Incentive_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Interview Incentive Configuration</label>
    <pluralLabel>Interview Incentive Configurations</pluralLabel>
</CustomObject>