brain/sources/prod-metadata/objects/Interview_Incentive_Configuration__mdt/fields/Incentivized__c.field-meta.xml
<CustomField>
    <fullName>Incentivized__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Incentivized</label>
    <type>Checkbox</type>
</CustomField>