brain/sources/prod-metadata/objects/Interview_Incentive_Configuration__mdt/fields/Negative_Incentive_Rate__c.field-meta.xml
<CustomField>
    <fullName>Negative_Incentive_Rate__c</fullName>
    <defaultValue>-100</defaultValue>
    <label>Negative Incentive Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>