brain/sources/prod-metadata/objects/Interview_Incentive_Configuration__mdt/fields/Positive_Incentive_Rate__c.field-meta.xml
<CustomField>
    <fullName>Positive_Incentive_Rate__c</fullName>
    <defaultValue>400</defaultValue>
    <label>Positive Incentive Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>