brain/sources/prod-metadata/objects/Interview_Incentive_Configuration__mdt/fields/Round_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Round_Multiplier__c</fullName>
    <label>Round Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>